fix for contact section height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -680,9 +680,9 @@ box-shadow:#cdcbcb 3px 3px 6px 0px inset, #cdcbcb -3px -3px 6px 1px inset;
   width: 85%;
   position: relative;
   gap: 20px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-around; */
  
 }
 
@@ -691,6 +691,7 @@ box-shadow:#cdcbcb 3px 3px 6px 0px inset, #cdcbcb -3px -3px 6px 1px inset;
   transform: translateX(-100%);
   animation: slide-in-from-right var(--animationSpeed) ease forwards;
   opacity: 0;
+  margin-bottom: 30px;
 }
 
 .card {
@@ -733,7 +734,7 @@ box-shadow:#cdcbcb 3px 3px 6px 0px inset, #cdcbcb -3px -3px 6px 1px inset;
   /* left: -95px; */
   background-color: #333333;
   /* background-color: white; */
-  border: 40px;
+  /* border: 40px; */
   height: 100%;
   
   /* width: 160px;
